fixed positions and jump method added enemy move method

--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,10 @@ header{
 }
 
 main{
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+    align-items: center;
     height: 500px;
     border: solid gray;
     background-color: rgba(2,0,67);
@@ -45,6 +49,7 @@ main{
     border-bottom-right-radius: 8%;
   
 }
+
 #road{
     height: 20px;
     background-color: rgb(189, 202, 202);
@@ -68,21 +73,46 @@ footer > button{
     border-radius: 10%;
 }
 
-img{
+#player{
     position: absolute;
-    top: 295px;
-        
+    transform: rotateY(180deg);
+    
 }
 .jump{
     animation: jump 1s cubic-bezier(0.16, 0.85, 0.79, 1.19); 
+ 
 }
 
 @keyframes jump{
     100%{
-        top:295px;
+        transform: rotateY(180deg);
+        
     }
     50%{
-        transform:translateY(-200%);
+        transform:translateY(-200%) rotateY(180deg);
+    
     }
 }
 
+#enemy{
+    position: absolute;
+}
+.move{
+    animation: move 1s ease-in-out;
+    
+}
+
+@keyframes move {
+    
+    100%{
+        transform: translateX(-1200%);
+    }
+
+    50%{
+        transform: translateX();
+    }
+    0%{
+
+    }
+    
+}
